[gd_scene load_steps=6 format=3 uid="uid://b51nf1ixppfaf"]

[ext_resource type="Texture2D" uid="uid://d4i338hti0urr" path="res://assets/rover/rover_side_view.png" id="1_rgeqo"]
[ext_resource type="Script" uid="uid://b2clq10lfm3lt" path="res://scripts/rover/rover_base.gd" id="1_yvyu5"]
[ext_resource type="PackedScene" uid="uid://d2a417r72tpsy" path="res://scenes/player/player_base.tscn" id="3_y6nc1"]
[ext_resource type="PackedScene" uid="uid://ceeyk8hpu6y7m" path="res://scenes/ui/interaction_hint.tscn" id="4_y6nc1"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6ksvg"]
size = Vector2(100, 150)

[node name="RoverBase" type="Node2D"]
script = ExtResource("1_yvyu5")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(320, 180)
texture = ExtResource("1_rgeqo")

[node name="PlayerBase" parent="." instance=ExtResource("3_y6nc1")]
position = Vector2(320, 235)

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(320, 180)
limit_left = 0
limit_top = 0
limit_right = 640
limit_bottom = 360

[node name="RestArea" type="Area2D" parent="."]
position = Vector2(150, 210)
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="RestArea"]
shape = SubResource("RectangleShape2D_6ksvg")

[node name="RestHint" type="Node2D" parent="RestArea"]
position = Vector2(0, -50)

[node name="InteractionHint" parent="RestArea/RestHint" instance=ExtResource("4_y6nc1")]

[node name="ExitArea" type="Area2D" parent="."]
position = Vector2(320, 210)
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExitArea"]
shape = SubResource("RectangleShape2D_6ksvg")

[node name="ExitHint" type="Node2D" parent="ExitArea"]
position = Vector2(0, -50)

[node name="InteractionHint" parent="ExitArea/ExitHint" instance=ExtResource("4_y6nc1")]

[node name="UpgradeArea" type="Area2D" parent="."]
position = Vector2(500, 210)
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="UpgradeArea"]
shape = SubResource("RectangleShape2D_6ksvg")

[node name="UpgradeHint" type="Node2D" parent="UpgradeArea"]
position = Vector2(0, -50)

[node name="InteractionHint" parent="UpgradeArea/UpgradeHint" instance=ExtResource("4_y6nc1")]

[connection signal="body_entered" from="RestArea" to="." method="_on_rest_area_body_entered"]
[connection signal="body_exited" from="RestArea" to="." method="_on_rest_area_body_exited"]
[connection signal="body_entered" from="ExitArea" to="." method="_on_exit_area_body_entered"]
[connection signal="body_exited" from="ExitArea" to="." method="_on_exit_area_body_exited"]
[connection signal="body_entered" from="UpgradeArea" to="." method="_on_upgrade_area_body_entered"]
[connection signal="body_exited" from="UpgradeArea" to="." method="_on_upgrade_area_body_exited"]
